manifests/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: assignment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api-tier
  template:
    metadata:
      labels:
        app: api-tier
    spec:
      containers:
      - name: api
        image: hbhargava2/api-service:v2
        ports:
        - containerPort: 8000
        resources:
          # FinOps Constraint Limits Optimization Boundaries
          requests:
            memory: "32Mi"
            cpu: "40m"
          limits:
            memory: "64Mi"
            cpu: "80m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: assignment
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api-tier
