manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: assignment
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
